made everything better

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <nav class="navnav navbar navbar-expand-md">
+    <nav class="navnav navbar navbar-expand-md navbar-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -32,7 +32,7 @@
                     <a class="nav-link" href="#">Link</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                 </li>
             </ul>
         </div>
@@ -46,25 +46,51 @@
     <div class="container-fluid">
         <div class="row">
             <div class="subjectlinks col-md">
-                <h3>Subjects</h3>
-                <ul class="list-group list-group-flush">
-                    <li class="list-item"><a href="#" class="list-group-item">test</a></li>
-                    <li class="list-item"><a href="#" class="list-group-item">test</a></li>
-                    <li class="list-item"><a href="#" class="list-group-item">test</a></li>
-                    <li class="list-item"><a href="#" class="list-group-item">test</a></li>
-                </ul>
+                <h2>Subjects</h2>
+                <div class="container">
+                    <table class="table">
+                        <tr>
+                            <td>
+                                <li>
+                                    <a href="">Maths</a></li>
+                                <li>
+                                    <a href="">Chemistry</a></li>
+
+                                <li>
+                                    <a href="">Physics</a></li>
+
+                                <li>
+                                    <a href="">Music</a></li>
+                                <li>
+                                    <a href="">Extra GCSE:</a>
+                                </li>
+                            </td>
+                            <td>
+                                <li>
+                                    <a href="">English</a></li>
+                                <li>
+                                    <a href="">Classics</a></li>
+                                <li>
+                                    <a href="test.html">Computing</a></li>
+                                <li>
+                                    <a href="">French</a></li>
+                                <li>
+                                    <a href="">Further Maths</a></li>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
             </div>
 
-            <div class="moreinfo cold-md">
+            <div class="moreinfo col-md">
                 <h3>More Information</h3>
-                <p>I go to Hillhouse school, in Doncaster. </p>
+                <p>I go to Hillhouse school, in Doncaster. I am currently in year 10 and am 14 years old. I like to code, cycle, and play piano. I am grade 4 in ABRSM piano</p>
             </div>
         </div>
     </div>
 
 
     <div class="footer">
-        <hr>
         <h3>&copy;Harry Russin</h3>
     </div>
 </body>
