--- a/index.html
+++ b/index.html
@@ -85,13 +85,9 @@
             <div class="moreinfo col-md">
                 <h3>More Information</h3>
                 <p>I go to Hillhouse school, in Doncaster. I am currently in year 10 and am 14 years old. I like to code, cycle, and play piano. I am grade 4 in ABRSM piano</p>
+                <li><a href="timetable.html">Timetable and homework</a></li>
             </div>
         </div>
-    </div>
-
-
-    <div class="footer">
-        <h3>&copy;Harry Russin</h3>
     </div>
 </body>
 
