made index better - almost done

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&family=Roboto&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
@@ -21,12 +23,12 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#"><strong>Navbar</strong></a>
+        <a class="navbar-brand" href="#"><i class="fas fa-graduation-cap"></i></a>
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
@@ -45,7 +47,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="subjectlinks col-md">
+            <div class="subjectlinks col-md-8">
                 <h2>Subjects</h2>
                 <div class="container">
                     <table class="table">
@@ -62,11 +64,6 @@
                                 <li>
                                     <a href="">Music</a></li>
                                 <li>
-                                    <a href="">Extra GCSE:</a>
-                                </li>
-                            </td>
-                            <td>
-                                <li>
                                     <a href="">English</a></li>
                                 <li>
                                     <a href="">Classics</a></li>
@@ -79,14 +76,23 @@
                             </td>
                         </tr>
                     </table>
+                    <hr style="background-color: azure; margin-top: 0;">
                 </div>
             </div>
 
             <div class="moreinfo col-md">
                 <h3>More Information</h3>
-                <p>I go to Hillhouse school, in Doncaster. I am currently in year 10 and am 14 years old. I like to code, cycle, and play piano. I am grade 4 in ABRSM piano</p>
-                <li><a href="timetable.html">Timetable and homework</a></li>
+                <p>I go to Hillhouse school, in Doncaster. I am currently in year 10 and am 14 years old. I like to code, cycle, and play piano. I am grade 4 in ABRSM piano although I am at a grade 6-7 level in my playing.</p>
+                <p>I aspire to be a physicist. I'm not completely sure what in yet, I am torn between Cosmology, Nuclear physics, and any sort of quantum phyiscs. I'd like to help work on finding out a grand unified field threory</p>
+                <p>ill write more stuff later</p>
             </div>
+        </div>
+    </div>
+
+    <div class="container-fluid linktohw">
+        <div class="container border p-3">
+            <h2>Homework &amp; Timetable</h2>
+            <a href="" class="btn btn-lg btn-outline-dark">Go!</a>
         </div>
     </div>
 </body>
