hw and timetable

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="https://www.hillhouse.doncaster.sch.uk/">School</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" href="#">Personal website - coming soon</a>
                 </li>
             </ul>
         </div>
@@ -47,7 +47,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="subjectlinks col-md-8">
+            <div class="subjectlinks col-md-7">
                 <h2>Subjects</h2>
                 <div class="container">
                     <table class="table">
@@ -76,23 +76,22 @@
                             </td>
                         </tr>
                     </table>
-                    <hr style="background-color: azure; margin-top: 0;">
                 </div>
             </div>
 
             <div class="moreinfo col-md">
                 <h3>More Information</h3>
                 <p>I go to Hillhouse school, in Doncaster. I am currently in year 10 and am 14 years old. I like to code, cycle, and play piano. I am grade 4 in ABRSM piano although I am at a grade 6-7 level in my playing.</p>
-                <p>I aspire to be a physicist. I'm not completely sure what in yet, I am torn between Cosmology, Nuclear physics, and any sort of quantum phyiscs. I'd like to help work on finding out a grand unified field threory</p>
+                <p>I aspire to be a physicist, that much is clear. I'm not completely sure what in yet, I am torn between Cosmology, Nuclear physics, and any sort of quantum phyiscs. I'd like to help work on finding out a grand unified field theory</p>
                 <p>ill write more stuff later</p>
             </div>
         </div>
     </div>
 
     <div class="container-fluid linktohw">
-        <div class="container border p-3">
+        <div class="container border p-3 boxbox">
             <h2>Homework &amp; Timetable</h2>
-            <a href="" class="btn btn-lg btn-outline-dark">Go!</a>
+            <a href="timetable.html" class="btn btn-lg btn-outline-dark">Go!</a>
         </div>
     </div>
 </body>
